@@ -4,6 +4,9 @@ Next Release
 Features
 --------
 
+- Add ``localizer`` property (reified) to the request.
+  See https://github.com/Pylons/pyramid/issues/508.
+
 - Add ``pdistreport`` script, which prints the Python version in use, the
   Pyramid version in use, and the version number and location of all Python
   distributions currently installed.
